Added user to be root in service file for path resolution. Included find line for debuild

--- a/debian/fido2ble-to-uhid.service
+++ b/debian/fido2ble-to-uhid.service
@@ -10,6 +10,7 @@ ExecStart=/usr/bin/fido2ble-to-uhid
 # DynamicUser=yes
 # ProtectSystem=yes
 # ReadWritePaths=/dev/uhid
+User=root
 
 [Install]
 WantedBy=multi-user.target
