--- a/debian/control
+++ b/debian/control
@@ -6,8 +6,8 @@ Rules-Requires-Root: no
 Build-Depends:
  debhelper-compat (= 13),
  dh-sequence-python3,
- python3-setuptools,
- python3-all,
+ python3
+# python3-setuptools,
 #Testsuite: autopkgtest-pkg-python
 Standards-Version: 4.6.2
 Homepage: https://github.com/PoneBiometrics/fido2ble-to-uhid/
