--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,12 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "fido2ble-to-uhid"
-version = "0.0.1"
-dependencies = [
-#    "uhid",
-    "dbus-fast",
+authors = [
+  {name= "Jó Ágila Bitsch", email = "jo.bitsch@gmail.com"},
+  {name= "Sigurhjörtur Snorrason", email = "sis@ponebiometrics.com"},
 ]
+version = "0.0.1"
+license = {text="MIT"}
 
 [project.scripts]
 fido2ble-to-uhid = "fido2ble_to_uhid.fido2ble_to_uhid:main"
