parse arguments to set loglevel
Use --log-level to set loglevel, and --uhid-log-level to set the much
more verbose UHIDDevice loglevel.
-l debug | info | warn | error

--- a/debian/fido2ble.service
+++ b/debian/fido2ble.service
@@ -5,7 +5,8 @@ After=bluetooth.target
 After=dev-uhid.device
 
 [Service]
-ExecStart=/usr/bin/fido2ble
+EnvironmentFile=-/etc/default/fido2ble
+ExecStart=/usr/bin/fido2ble $DAEMON_ARGS
 # OpenFile=/dev/uhid  # potentially to run this in a less powerful user
 # DynamicUser=yes
 # ProtectSystem=yes
