--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "fido2ble"
 authors = [
   {name= "Jó Ágila Bitsch", email = "jo.bitsch@gmail.com"},
   {name= "Sigurhjörtur Snorrason", email = "sis@ponebiometrics.com"},
-  {name= "Magnus Ringerud", email = "mar@ponebiometrics.com>ponebiometrics.com"},
+  {name= "Magnus Ringerud", email = "mar@ponebiometrics.com"},
   {name= "Kacper Wysocki", email = "kacper@delta9.pl"},
 ]
 version = "0.0.1"
